# LunchTogether

./: .env.example  .env.local.example  .gitignore
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 82389be03b7e_initialmigration.py  a1b2c3d4e5f6_add_all_epic_models.py  c8849dcdeddf_initialdbsnapshot.py  d1e2f3a4b5c6_role_and_permissions.py  e2f3a4b5c6d7_add_quantity_to_order_items.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: analytics.py  auth.py  balances.py  groups.py  orders.py  restaurants.py  router.py  users.py
backend/app/core/: email.py  exceptions.py  middleware.py  security.py  storage.py
backend/app/models/: __init__.py  balance.py  enums.py  group.py  order.py  restaurant.py  user.py
backend/app/repositories/: balance.py  base.py  group.py  order.py  restaurant.py  user.py
backend/app/schemas/: analytics.py  balance.py  base.py  group.py  order.py  restaurant.py  user.py
backend/app/workflows/balance/: adjust.py
backend/app/workflows/group/: create.py  invite.py  manage_members.py
backend/app/workflows/order/: create.py  lifecycle.py
backend/app/workflows/user/: login.py  register.py
docs/: business_requirements.txt  deployment-guide.md  implementation_plan_backend.md  implementation_plan_deployment.md  implementation_plan_frontend.md  local-development.md  operations.md  technical_requirements.txt
frontend/: .env.example  components.json  index.html  package-lock.json  package.json  tsconfig.json
infrastructure/: deploy.sh  setup.sh
(+96 files in other folders)
